tests/error/notPointerValue.tpc
int main(void){
	int b;
	b = *b;
	return 0;
}